// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Species > with empty list > should match snapshot 1`] = `
<div
  data-testid="species"
>
  <p
    data-testid="species-title"
  >
    Species
  </p>
  <p
    data-testid="species-empty"
  >
    No 
    species
     linked
  </p>
</div>
`;

exports[`Species > with filled list > should match snapshot 1`] = `
<div
  data-testid="species"
>
  <p
    data-testid="species-title"
  >
    Species
  </p>
  <ul>
    <li
      data-testid="species-0"
    >
      VALUE_1
    </li>
    <li
      data-testid="species-1"
    >
      VALUE_2
    </li>
  </ul>
</div>
`;
